# RoboHub

./: .gitignore  README.md  TODO.md
frontend/: package.json
frontend/.github/workflows/: deploy-hf-spaces.yml
frontend/src/lib/components/3d/elements/compute/modal/: VideoInputConnectionModal.svelte
frontend/src/lib/elements/compute/: RemoteComputeManager.svelte.ts
frontend/src/lib/elements/robot/: RobotManager.svelte.ts
frontend/src/lib/elements/robot/drivers/: RemoteConsumer.ts  RemoteProducer.ts
frontend/src/lib/elements/video/: VideoManager.svelte.ts  videoConnection.svelte.ts  videoStreaming.svelte.ts
services/inference-server/: .gitignore  pyproject.toml
services/inference-server/client/: package.json
services/inference-server/src/inference_server/: session_manager.py
services/transport-server/client/js/: README.md  package.json
services/transport-server/demo/: README.md  package.json  test-demo.js
services/transport-server/demo/src/routes/: +page.svelte
services/transport-server/demo/src/routes/[workspaceId]/: +page.svelte
services/transport-server/demo/src/routes/[workspaceId]/robotics/: +page.svelte
services/transport-server/demo/src/routes/[workspaceId]/robotics/consumer/: +page.svelte
services/transport-server/demo/src/routes/[workspaceId]/robotics/producer/: +page.svelte
services/transport-server/demo/src/routes/[workspaceId]/video/: +page.svelte
services/transport-server/demo/src/routes/[workspaceId]/video/consumer/: +page.svelte
services/transport-server/server/: pyproject.toml
(+1 files in other folders)
