[project]
name = "lerobot_arena_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.11.5",
    "uvicorn[standard]>=0.34.3",
    "av>=12.0.0",
    "aiortc>=1.6.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]
